<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.gengkev.exampleapp.Assignment3Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/assgn3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assgn3_button_label"
            />

        <TextView
            android:id="@+id/assgn3_textViewCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assgn3_hello"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/assgn3_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:textColor="@android:color/primary_text_dark"
        android:background="#F44336"
        android:text="@string/assgn3_textview_label_1"
        />

    <TextView
        android:id="@+id/assgn3_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:background="#3F51B5"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/assgn3_textview_label_2"
        />

    <TextView
        android:id="@+id/assgn3_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:background="#4CAF50"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/assgn3_textview_label_3"
        />

    <TextView
        android:id="@+id/assgn3_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:background="#FF9800"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/assgn3_textview_label_4"
        />


</RelativeLayout>
